weld_map_part_type_excludes

--- a/Web.config
+++ b/Web.config
@@ -9,8 +9,8 @@
     </sectionGroup>
   </configSections>
   <appSettings>
-      <!-- <add key="connection_string" value="Server=tcp:gbespoolsdbserver.database.windows.net;Database=gbe;User ID=hans@gbespoolsdbserver.database.windows.net;Password=suaL5MsCJ697;Trusted_Connection=False;Encrypt=True;" />-->
-      <add key="connection_string" value="Integrated Security=true;database=gbe;server=localhost\SQLEXPRESS01" />  
+      <add key="connection_string" value="Server=tcp:gbespoolsdbserver.database.windows.net;Database=gbe;User ID=hans@gbespoolsdbserver.database.windows.net;Password=suaL5MsCJ697;Trusted_Connection=False;Encrypt=True;Connection Timeout=120" />
+      <!-- <add key="connection_string" value="Integrated Security=true;database=gbe;server=localhost\SQLEXPRESS01" />  -->
   <add key="gsbin" value="C:\Program Files (x86)\gs\gs9.50\bin" />
     <add key="aspnet:MaxHttpCollectionKeys" value="40000" />
     <add key="pdf2doc" value="C:\Program Files (x86)\Intelligent Converters\p2wagent.exe" />
@@ -21,7 +21,60 @@
     <add key="users_exempt_to_schedule_time_based_lockout" value="pcf|pcf" />
     <add key="rate_per_minute_welder" value="0.33" />
     <add key="rate_per_minute_fitter" value="0.28" />
-  </appSettings>
+
+    <add key="weld_map_part_type_excludes" value ="('304L SCH10 PIPE',
+'304L SCH40 PIPE',
+'304L THINWALL PIPE',
+'304L TRUBORE PIPE',
+'316L SCH10 PIPE',
+'316L THINWALL PIPE',
+'316L TRUBORE PIPE',
+'CARBON PIPE 6.5',
+'CARBON TATA PIPE 6.1',
+'GALVANISED PIPE',
+'PIPE',
+'PIPE 1/2 RANDOM S/S',
+'PIPE 6.5M S/S',
+'PIPE 6M PE',
+'PIPE 6M S/S',
+'PIPE IN PIPE',
+'Pipe Module',
+'PIPE SHELL',
+'PIPE SLEEVE',
+'SPEEDFIT BARRIER PIPE',
+'T304L TRUBORE PIPE',
+'TRUBORE PIPE - 6M',
+'CARBON PN16 BLANK FLANGE',
+'CARBON PN25/40 BLANK FLANGE',
+'CARBON VICTAULIC GROOVE',
+'CARBON THREAD',
+'THREAD',
+'CARBON SPADE',
+'SPADE',
+'316L TRUBORE FLANGE  BACKING',
+'316L TRUBORE TABLE D FLANGE  BACKING',
+'TRUBORE SCOTCHKOTE PN16 BACKING FLANGE',
+'TRUBORE SCOTCHKOTE PN25 BACKING FLANGE',
+'TRUBORE SCREWED BARRELL NIPPLE',
+'VIC - NIPPLES GALVANISED',
+'SCREWED CT NIPPLE',
+'NIPPLES',
+'CARBON CUT &gt; CLEAN',
+'CUT &gt; CLEAN',
+'TRUBORE CUT &gt; CLEAN',
+'CARBON HANDLING',
+'TRUBORE HANDLING',
+'STAINLESS BESPOKE ORDER',
+'NDT TESTING',
+'WELD MAPPING',
+'STEELWORK / BRACKETRY',
+'CARBON - EXTRAS',
+'DISCOUNT',
+'TRUBORE PULLED COLLAR',
+'TRANSPORT'
+)" />
+         
+    </appSettings>
 
   <connectionStrings/>
   
